--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html><html><head><title>timothechau.vet/</title><link rel="canonical" href="timothechau.vet/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=timothechau.vet/" /></head></html>
+<!DOCTYPE html><html><head><title>https://timothechau.vet/</title><link rel="canonical" href="https://timothechau.vet/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://timothechau.vet/" /></head></html>
